# cpp_demos

./: .gitignore  CMakeLists.txt  CMakeSettings.json
boost.asio.demo/: CMakeLists.txt
boost.asio.demo/scan_port/: CMakeLists.txt  scan_port.cpp
dll/: CMakeLists.txt
dll/dynamic_load_win32/: CMakeLists.txt  main.cpp
dll/foo_api/: CMakeLists.txt  dll_main.cpp  foo_api.cpp
dll/foo_api/include/: foo_api.h
dll/use_foo_api/: CMakeLists.txt  main.cpp
include/: demo.h
libbar/: CMakeLists.txt  bar.cpp  bar.h
libfoo/: CMakeLists.txt  foo.cpp  foo.h
socket/client/: CMakeLists.txt  main.cpp  select_client.h
socket/server/: CMakeLists.txt  iterative_server.h  main.cpp  select_server.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/gtest/: CMakeLists.txt
test/mockcpp/: CMakeLists.txt
test/testbar/: CMakeLists.txt  testbar.cpp
test/testfoo/: CMakeLists.txt  testfoo.cpp
