set(BAR_SRCS
    bar.cpp
)

add_library(bar STATIC
    ${BAR_SRCS}
)

target_link_libraries(bar
    PRIVATE
        foo
)

get_property(BAR_DIR_INCLUDE_DIRECTORIES DIRECTORY PROPERTY INCLUDE_DIRECTORIES)
cmake_print_variables(BAR_DIR_INCLUDE_DIRECTORIES)

get_property(BAR_DIR_INTERFACE_INCLUDE_DIRECTORIES DIRECTORY PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
cmake_print_variables(BAR_DIR_INTERFACE_INCLUDE_DIRECTORIES)

get_property(BAR_LIB_INCLUDE_DIRECTORIES TARGET bar PROPERTY INCLUDE_DIRECTORIES)
cmake_print_variables(BAR_LIB_INCLUDE_DIRECTORIES)

get_property(BAR_LIB_INTERFACE_INCLUDE_DIRECTORIES TARGET bar PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
cmake_print_variables(BAR_LIB_INTERFACE_INCLUDE_DIRECTORIES)

get_property(BAR_LINK_LIBRARIES TARGET bar PROPERTY LINK_LIBRARIES)
cmake_print_variables(BAR_LINK_LIBRARIES)

get_property(BAR_INTERFACE_LINK_LIBRARIES TARGET bar PROPERTY INTERFACE_LINK_LIBRARIES)
cmake_print_variables(BAR_INTERFACE_LINK_LIBRARIES)

set_property(TARGET bar PROPERTY INTERFACE_BAR_PROPERTY 123)
set_property(TARGET bar PROPERTY INTERFACE_BAR_PROPERTY2 456)
set_property(TARGET bar APPEND PROPERTY
    COMPATIBLE_INTERFACE_NUMBER_MAX BAR_PROPERTY
)
